Change page layout

--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-6 col-lg-4 d-lg-none product-box">
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-6 col-lg-4 product-box">
                                 <div class="card number">
                                     <div class="card-image">
                                         <img src="https://i.postimg.cc/XqrngVzz/white-and-black-stratocaster-electric-guitar-with-case-1545333.jpg" alt="">
@@ -132,7 +134,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-6 col-lg-4 d-lg-none product-box">
+                            <div class="col-sm-6 col-lg-4 product-box">
                                 <div class="card number">
                                     <div class="card-image">
                                         <img src="https://i.postimg.cc/L8L6788d/abstract-business-code-coding-276452.jpg" alt="">
@@ -143,7 +145,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-6 col-lg-4 d-lg-none product-box">
+                            <div class="col-sm-6 col-lg-4 product-box">
                                 <div class="card number">
                                     <div class="card-image">
                                         <img src="https://i.postimg.cc/bYVJS5B5/open-pages-on-brown-wooden-table-3775009.jpg" alt="">
@@ -166,7 +168,7 @@
                         <p><i class="far fa-copyright"></i></i> Copyright 2020 FreebiesXpress.com</p>
                     </div>
                     <div class="col-lg-8">
-                        <ul class="contact-list-unstyled p-0">
+                        <ul class="contact-list-unstyled p-0 d-flex justify-content-start">
                             <li class="list-inline-item"><a href="#"><i class="fab fa-twitter"></i></a></li>
                             <li class="list-inline-item"><a href="#"><i class="fab fa-facebook"></i></a></li>
                             <li class="list-inline-item"><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
